--- a/metaexplorer.ui
+++ b/metaexplorer.ui
@@ -34,7 +34,7 @@
            <string/>
           </property>
           <property name="pixmap">
-           <pixmap resource="icons/icons.qrc">:/other/other/img_missing.png</pixmap>
+           <pixmap resource="icons/icons.qrc">:/cover/img_missing.png</pixmap>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
