--- a/playercontrols.ui
+++ b/playercontrols.ui
@@ -6,12 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>455</width>
-    <height>65</height>
+    <width>257</width>
+    <height>53</height>
    </rect>
-  </property>
-  <property name="windowTitle">
-   <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
@@ -29,6 +26,9 @@
          <width>33</width>
          <height>29</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>Morceau précédent</string>
        </property>
        <property name="text">
         <string/>
@@ -53,6 +53,9 @@
          <height>29</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>Play / Pause</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -75,6 +78,9 @@
          <width>33</width>
          <height>29</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>Stop</string>
        </property>
        <property name="text">
         <string/>
@@ -99,6 +105,9 @@
          <height>29</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>Morceau suivant</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -122,6 +131,9 @@
          <height>29</height>
         </size>
        </property>
+       <property name="toolTip">
+        <string>Vitesse de lecture</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -144,6 +156,9 @@
          <width>33</width>
          <height>29</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>Mode de lecture</string>
        </property>
        <property name="text">
         <string/>
