--- a/playersliders.ui
+++ b/playersliders.ui
@@ -6,12 +6,9 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>591</width>
+    <width>596</width>
     <height>53</height>
    </rect>
-  </property>
-  <property name="windowTitle">
-   <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
@@ -116,7 +113,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="icons/icons.qrc">
+        <iconset>
          <normaloff>:/generic/generic/unmute.png</normaloff>:/generic/generic/unmute.png</iconset>
        </property>
        <property name="flat">
@@ -176,7 +173,7 @@
         <string>Volume</string>
        </property>
        <property name="text">
-        <string>000%</string>
+        <string>50%</string>
        </property>
        <property name="textFormat">
         <enum>Qt::PlainText</enum>
@@ -194,8 +191,6 @@
    <header>qlabelclickable.h</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="icons/icons.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
