--- a/playlistcontrols.ui
+++ b/playlistcontrols.ui
@@ -116,7 +116,23 @@
       </layout>
      </item>
      <item>
-      <widget class="QListView" name="playlist_controls_list"/>
+      <widget class="QTableView" name="playlist_controls_list">
+       <property name="acceptDrops">
+        <bool>true</bool>
+       </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="dragEnabled">
+        <bool>true</bool>
+       </property>
+       <property name="dragDropMode">
+        <enum>QAbstractItemView::InternalMove</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
